# inbox-appeals-service

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/config/: db.py  jwt.py  logger.py  settings.py
app/models/: __init__.py  citizen_profile.py  enums.py  mixins.py  ticket.py  user.py
app/repositories/: base.py  citizen_profiles_repository.py  tickets_repository.py  users_repository.py
app/routers/: api.py
app/routers/routes/: admin_analytics.py  admin_staff.py  auth.py  tickets_staff.py  tickets_user.py
app/schemas/: analytics.py  auth.py  tickets.py  users.py
app/security/: dependencies.py  jwt.py
app/services/: admin_service.py  analytics_service.py  auth_service.py  staff_service.py  ticket_service.py
app/utils/: exceptions.py
app/utils/demo/: create_admin.py  generate_fake_tickets.py  generate_fake_users.py  seed_demo_data.py
docker/: entrypoint.sh
migrations/models/: 0_20250817115454_init.py
tests/: __init__.py  conftest.py  test_auth.py  test_staff_flow.py  test_tickets_user.py
